# lens-grader

./: .gitignore  CMakeLists.txt  README.md  component.h  element.cpp  element.h  group.cpp  group.h  lens-grader.cbp  lens-grader.depend  lens-grader.kdev4  lens-grader.layout  lens.cpp  lens.h  main.cpp  ray.cpp  ray.h
.kdev4/: lens-grader.kdev4
include/: component.h  element.h  group.h  lens.h  ray.h
src/: CMakeLists.txt  component.cpp  component.h  element.cpp  element.h  group.cpp  group.h  lens.cpp  lens.h  main.cpp  ray.cpp  ray.h
tests/: CMakeLists.txt  main.cpp
